# shell_script

./: .editorconfig  .env  .gitignore  Pipfile  README.md  explain.md  mail.sql  speaker.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bash.yml  go.yml  python3.yml
bash/function/: README.md  cui_battery_info  cui_mem_info  defrag  gnu_alias  load_env  md2epub  os_type  pbcopy  pbpaste  read_function
functions/: gnu.sh  strings.sh  util.sh  youtube.sh
g++/src/cli/: CMakeLists.txt
g++/src/cli/error/src/: Makefile
g++/src/cli/error/src/include/: error.h
g++/src/cli/error/src/lib/: error.cc
g++/src/cli/example/: Makefile
g++/src/cli/example/src/: CMakeLists.txt  main.cc
g++/src/cli/example/src/include/: example.h  web.h
g++/src/cli/example/src/lib/: command.cc  command.h  example.cc  example_test.cc  web.cc
g++/src/cli/mssql/: CMakeLists.txt  Makefile
go/src/cli/: gnu.go  go.mod  invoke.go  main.go  pandoc.go  workspace.code-workspace
go/src/cli/example/: go.mod  main.go
go/src/cli/example/v1/: v1.go
go/src/cli/gnu/: Makefile  go.mod  main.go
go/src/cli/gnu/v1/: v1.go
go/src/cli/pandoc/: go.mod  main.go
go/src/cli/pandoc/v1/: v1.go
go/src/cli/pandoc/v2/: v2.go
go/src/example/: go.mod  main.go
go/src/example/v1/: v1.go
go/src/gnu/: go.mod  main.go
golang/src/example/: go.mod  main.go
golang/src/gnu/: go.mod  main.go
golang/src/gnu/v1/: v1.go
python3/src/: ebook.py  example.py  gnu.py  mssql.py  system.py  template.py
python3/tests/: test_ebook.py  test_example.py
rust/src/example/: Cargo.toml
rust/src/example/src/: main.rs
